# XTomate

./: .gitignore  Cargo.toml  Makefile  README.md  example.toml
src/: config.rs  main.rs
src/plugins/: manager.rs
src/workflow/: mod.rs  placeholders.rs  runner.rs  structure.rs
