[package]
name = "xtomate"
version = "0.1.2"
edition = "2021"
authors = ["vyPal"]
description = "Your poweful automation ally"
license = "GPL-3.0-only"
readme = "README.md"
homepage = "https://github.com/vyPal/XTomate"
repository = "https://github.com/vyPal/XTomate"
keywords = ["cli", "automation", "task-runner", "workflow"]
categories = ["command-line-utilities"]

[[bin]]
name = "xt"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
directories = "5.0.1"
libloading = "0.8.5"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"] }
toml = "0.8.19"
